[hjs] 알림 및 설정 파라미터 모두 필수로 변경
